focused input outlines removed

--- a/src/Widgets.css
+++ b/src/Widgets.css
@@ -16,6 +16,8 @@
 .widgets__input > input {
     border: none;
     background-color: var(--twitter-background);
+}:focus{
+    outline: none;
 }   
 
 .widgets__searchIcon {
