--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -3,7 +3,6 @@
     border-bottom: 8px solid var(--twitter-background);
     padding-right: 10px;
 }
-
 .tweetBox > form {
     display: flex;
     flex-direction: column ;
@@ -19,6 +18,8 @@
     margin-left: 20px;
     font-size: 20px;
     border: none;
+}:focus{
+    outline: none;
 }
 
 .tweetBox__tweetButton {
@@ -36,4 +37,6 @@
 .tweetBox__imageInput {
     border: none;
     padding: 10px;
+}:focus{
+    outline: none;
 }
